setguistate fixed